# web3

./: .gitignore  README.md  setup.sh
backend/: conftest.py  main.py  requirements.txt
backend/app/: config.py  database.py
backend/app/routes/: documents.py  upload.py
backend/app/services/: ai_engine.py  file_parser.py  humanity_score.py  solana_relayer.py  temporal_engine.py
backend/tests/: test_backend.py
frontend/: next.config.js  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
program/: Anchor.toml  Cargo.toml  package.json
program/programs/bunny_attestation/: Cargo.toml
program/programs/bunny_attestation/src/: lib.rs
program/tests/: bunny_attestation.ts
