[package]
name = "bunny-attestation"
version = "0.1.0"
description = "Bunny - Decentralized attestation layer for novelists"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bunny_attestation"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
